--- a/src/_includes/partials/contentBlocks.njk
+++ b/src/_includes/partials/contentBlocks.njk
@@ -14,6 +14,7 @@
       {{ button(
         {
           text: item.text,
+          href: '/soknad-og-skjema/?title=' + product.title | slugify,
           variant: item.variant
         }
       ) }}
