Fikse enda en feil i url

--- a/src/_includes/partials/contentBlocks.njk
+++ b/src/_includes/partials/contentBlocks.njk
@@ -14,7 +14,7 @@
       {{ button(
         {
           text: item.text,
-          href: '/soknad-og-skjema/ + product.title | slugify,
+          href: '/soknad-og-skjema/' + product.title | slugify,
           variant: item.variant
         }
       ) }}
