--- a/src/pages/produktoversikt/soknad-og-skjema.njk
+++ b/src/pages/produktoversikt/soknad-og-skjema.njk
@@ -11,7 +11,7 @@
   },
   eleventyComputed: {
     title: "{{ product.title }}",
-    permalink: "/soknad-og-skjema/{{ product.title | slug }}.html"
+    permalink: "/soknad-og-skjema/{{ product.title | slug }}/"
   }
 }
 ---
