Sortere css-klasser

--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -98,9 +98,9 @@
       notifyOpen: false
     }">
     {% include "partials/prototypeNav.njk" %}
-    <div class="relative z-10 transition-transform duration-200 ease-in bg-white" x-bind:class="indexOpen ? 'translate-y-[80vh]' : 'translate-y-0'" x-on:click.outside="indexOpen = false">
+    <div class="relative z-10 transition-transform duration-200 ease-in bg-white" x-bind:class="indexOpen ? 'translate-y-[70vh]' : 'translate-y-0'" x-on:click.outside="indexOpen = false">
     {% include "partials/banner.njk" %}
-    {% include "partials/header.njk" %}
+    {% include "partials/header-old.njk" %}
     {% block content %}{% endblock %}
     {% include "partials/footer.njk" %}
     </div>
