--- a/src/_includes/partials/prototypeNav.njk
+++ b/src/_includes/partials/prototypeNav.njk
@@ -1,15 +1,16 @@
-<div class="fixed w-full h-screen overflow-y-auto font-mono text-2xl text-white bg-red-600 bg-gradient-to-b from-transparent to-red-800/50 md:text-3xl">
+<div class="fixed w-full h-[70vh] overflow-y-auto font-mono text-2xl bg-gray-200 md:text-3xl">
   <div class="grid grid-cols-layout">
-    <ul class="py-3 divide-y md:py-6 divide-red-400/25 col-content">
+    <ul class="py-3 divide-y md:py-6 divide-gray-400/25 col-content">
     {% for page in collections.template | sort(false, false, 'data.order') %}
       <li class="">
-        <a href="{{ page.url }}" class="inline-block py-4 hover:text-orange-300 hover:underline decoration-from-font underline-offset-4">
+        <a href="{{ page.url }}" class="inline-block py-4 hover:text-blue-500 hover:underline decoration-from-font underline-offset-4">
           <span class="w-5">{{ '0' if page.data.order < 10 }}{{ page.data.order }}</span>
         {{ page.data.title | safe }}
         </a>
       </li>
     {% endfor %}
     </ul>
+    <div class="absolute inset-x-0 bottom-0 h-40 pointer-events-none bg-gradient-to-b from-transparent to-gray-600/40"></div>
   </div>
 </div>
 
