--- a/src/pages/artikkel/artikkel.njk
+++ b/src/pages/artikkel/artikkel.njk
@@ -11,7 +11,7 @@ bodyClass: 'bg-gray-100'
 {% block content %}
   <main class="min-h-[61vh] text-lg text-gray-800">
     <div class="grid pt-8 pb-20 bg-white md:pt-12 grid-cols-layout">
-      <div class="col-content">
+      <div class="col-popout">
         <p class="flex items-center gap-2 text-purple-600">
           <svg xmlns="http://www.w3.org/2000/svg" class="flex-none w-7 h-7 -mb-0.5" width="24" height="24" fill="none" viewBox="0 0 24 24" aria-hidden="true" focusable="false" role="img">
             <path stroke="#634689" stroke-width="1.5" d="m9.5 12.5 2.5 1 2.5 1.5V6L12 7.5l-2.5 1m-5 2c0-1.1.9-2 2-2h3v4h-3a2 2 0 0 1-2-2ZM7 13l2.5 6.5m8-9H21M17 6l3-2m-3 11 3 2" />
