--- a/src/pages/soknad/soknad.njk
+++ b/src/pages/soknad/soknad.njk
@@ -10,7 +10,7 @@ tags:
 {% block content %}
   <main class="min-h-[61vh] text-lg text-gray-900">
     <div class="grid py-8 bg-white grid-cols-layout md:pt-12 md:pb-20 ">
-      <div class="col-popout">
+      <div class="col-feature">
         <h1 class="text-3xl font-semibold leading-tight md:text-4xl">Søknad om dagpenger</h1>
 
         <div class="mt-3 md:grid md:grid-flow-row-dense md:gap-20 md:grid-cols-12">
