--- a/src/_includes/macros/button.njk
+++ b/src/_includes/macros/button.njk
@@ -4,19 +4,15 @@
 
   {% if params.variant %}
     {% if params.variant === "primary" %}
-      {% set variant = "bg-blue-500 text-white border-2 border-blue-500 hover:border-blue-800" %}
+      {% set variant = "bg-blue-500 text-white border-blue-500 hover:bg-blue-700 hover:border-blue-700" %}
     {% endif %}
 
     {% if params.variant === "secondary" %}
-      {% set variant = "bg-blue-50 text-blue-600 border-2 border-blue-50 hover:border-blue-600" %}
-    {% endif %}
-
-    {% if params.variant === "tertiary" %}
-      {% set variant = "bg-blue-50 text-blue-600" %}
+      {% set variant = "bg-white text-blue-500 border-white hover:border-blue-500 hover:text-blue-600" %}
     {% endif %}
   {% endif %}
 
-  <a href="{{ params.href or '#' }}" class="inline-flex items-center gap-2 px-6 py-2.5 no-underline rounded font-semibold leading-tight text-center justify-center {{ params.class }} {{ variant or buttonClasses }}">
+  <a href="{{ params.href or '#' }}" class="inline-flex items-center gap-2 px-6 py-2.5 no-underline rounded font-semibold leading-tight text-center justify-center shadow-sm border-2 ring-1 ring-black/5 {{ variant or buttonClasses }} {{ params.class }}">
     <span>{{ params.text | safe }}</span>
   </a>
 {% endmacro %}
