--- a/src/pages/produktoversikt/produktoversikt.njk
+++ b/src/pages/produktoversikt/produktoversikt.njk
@@ -62,9 +62,9 @@ bodyClass: ''
       });
       updateCount()">
     <div class="grid grid-cols-layout">
-      <div class="relative w-full col-popout">
+      <div class="relative w-full col-content lg:col-feature">
 
-        <div class="hidden float-right my-2 ml-24 sm:block">
+        <div class="hidden float-right my-2 ml-24 xs:block">
           {{ '/src/_includes/svg/pictograms/support.svg' | svgContents('w-[12vw] h-auto overflow-hidden max-w-[8rem] aspect-square') | safe }}
         </div>
 
@@ -77,9 +77,9 @@ bodyClass: ''
     </div>
 
     <div class="grid grid-cols-layout">
-      <div class="grid w-full gap-8 pb-20 lg:gap-x-16 lg:items-start lg:grid-cols-3 col-popout">
+      <div class="grid w-full gap-8 pb-20 lg:gap-x-16 lg:items-start lg:grid-cols-sidebar col-content lg:col-feature">
 
-        <div class="lg:row-span-2">
+        <div class="lg:-mt-4 lg:row-span-2 lg:col-start-2">
           {% set labelClasses = "inline-flex cursor-pointer px-4 pt-1.5 pb-1.5 leading-tight text-base bg-gray-100 rounded-full hover:bg-deepblue-100 peer-checked:bg-deepblue-500 peer-checked:text-white peer-focus:ring-2 peer-focus:ring-deepblue-800" %}
           {% set inputClasses = "absolute opacity-0 pointer-events-none peer" %}
 
@@ -135,7 +135,7 @@ bodyClass: ''
 
         </div>
 
-        <div class="lg:col-span-2 lg:-order-1">
+        <div class="lg:col-start-1 lg:-order-1">
           <div class="relative mt-6">
             <label for="searchFilter" class="font-semibold sr-only">Søk</label>
             <span class="absolute inset-y-0 left-0 grid px-2.5 place-items-center">
@@ -146,16 +146,19 @@ bodyClass: ''
 
           <p class="mt-8 mb-2">Viser <span x-text="count"></span> av {{ products.length }} produkter og tjenester</p>
 
-          <div class=" grid gap-1.5" x-ref="entries" x-show="count !== 0">
+          <div class="border-b border-deepblue-100" x-ref="entries" x-show="count !== 0">
             {% for product in collections.produkt %}
               <div
                 x-data="{ expanded: false }"
-                class=" focus-within:z-10"
+                class="focus-within:z-10 -mx-clamp-gap px-clamp-gap sm:-mx-0 sm:px-0 border-t border-deepblue-100"
+                x-bind:class="expanded ? '' : ''"
                 x-show="filterItem($el)"
                 data-type="{{ product.data.type | slugify }}"
                 data-area="{{ product.data.area | slugify }}">
 
-                <div class="relative flex items-center w-full gap-4 px-4 py-4 text-left rounded-lg lg:px-6 c-product-item" x-bind:class="expanded ? 'bg-deepblue-200' : 'bg-deepblue-50 hover:bg-deepblue-50/60'">
+                <div
+                  class="py-4 px-clamp-gap -mx-clamp-gap -my-px relative z-10 flex items-center gap-4 text-left sm:-mx-2 sm:px-4 sm:rounded-lg hover:z-20"
+                  x-bind:class="expanded ? ' hover:bg-deepblue-200 bg-deepblue-50' : 'hover:bg-deepblue-200'">
                   {% if product.data.icon %}
                     {{ product.data.icon | svgContents('w-12 h-12 lg:w-14 lg:h-14 shrink-0') | safe }}
                   {% endif %}
@@ -174,21 +177,24 @@ bodyClass: ''
                       {%- endfor -%}
                     </p>
                   </div>
-                  <button x-on:click="expanded = !expanded" class="absolute inset-0 flex items-center justify-end px-4 rounded-lg group focus:outline-none focus-visible:ring focus-visible:ring-blue-800" x-bind:aria-expanded="expanded">
+                  <button x-on:click="expanded = !expanded" class="absolute inset-0 flex items-center justify-end pr-4 rounded-lg group focus:outline-none focus-visible:ring focus-visible:ring-inset focus-visible:ring-blue-800" x-bind:aria-expanded="expanded">
                     <span class="sr-only">Vis/skjul innhold</span>
                     {{ '/src/_includes/svg/icons/chevron-down.svg' | svgContents('mr-1.5 w-5 h-5 opacity-50 transition duration-100 group-aria-expanded:rotate-180') | safe }}
                   </button>
                 </div>
 
-                <div class="relative px-5 pt-6 pb-6 markdown max-w-prose min-h-[30vh]" x-bind:hidden="!expanded">
+                <div class="pt-6 pb-8 px-clamp-gap -mx-clamp-gap relative min-h-[30vh] markdown bg-deepblue-50 sm:-mx-2 sm:-mt-2 sm:px-5 sm:rounded-b-lg" x-bind:hidden="!expanded">
                   <p>{{ product.data.ingress }}</p>
 
                   {{ product.content | markdown | safe }}
-
-                  {% if product.data.egenSide %}
-                  <p><a class="text-deepblue-500 hover:underline hover:text-deepblue-600" href="/produktoversikt/{{ product.data.title | slugify }}.html">(Vis som egen side)</a></p>
-                  {% endif %}
                 </div>
+
+                {% if product.data.egenSide %}
+                <div x-bind:hidden="!expanded" class="sm:px-6 pt-4 pb-6">
+                  <a class="inline-block mx-auto text-center underline hover:no-underline hover:text-blue-600" href="/produktoversikt/{{ product.data.title | slugify }}.html">Vis som egen side</a>
+                </div>
+                {% endif %}
+
               </div>
 
             {% endfor %}
@@ -198,7 +204,7 @@ bodyClass: ''
           </div>
         </div>
 
-        <div class="p-4 bg-orange-100 rounded-lg lg:col-span-2 lg:px-6 lg:py-5">
+        <div class="p-4 bg-orange-100 rounded-lg lg:col-start-1 lg:px-6 lg:py-5">
           <h3 class="text-xl font-semibold">
             Klage eller anke på vedtak?
           </h3>
