--- a/src/_includes/partials/banner.njk
+++ b/src/_includes/partials/banner.njk
@@ -1,5 +1,5 @@
 <div class="z-20 grid py-8 text-xl leading-snug border-t-8 bg-deepblue-800 border-warning grid-cols-layout text-purple-50">
-  <div class="flex items-start gap-4 md:gap-5 md:items-center col-content">
+  <div class="flex items-start gap-4 md:gap-5 md:items-center col-feature">
     <div class="grid w-12 h-12 -mb-px rounded-full bg-purple-800/50 md:w-16 md:h-16 shrink-0 place-items-center">
       {{ '/src/_includes/svg/icons/helmet.svg' | svgContents('w-6 h-6 md:w-8 md:h-8 mb-1') | safe }}
     </div>
