--- a/src/pages/soknad/soknad.njk
+++ b/src/pages/soknad/soknad.njk
@@ -1,9 +1,8 @@
 ---
 title: 'Søknad'
 description: 'Grunnoppsett for søknader'
-order: 5
-tags:
-  - template
+order: 6
+tags: ['template']
 ---
 {% extends 'base.njk' %}
 
