--- a/src/pages/tom/tom.njk
+++ b/src/pages/tom/tom.njk
@@ -1,10 +1,9 @@
 ---
 title: 'Tom side'
 description: ''
-order: 6
+order: 7
 bodyClass: ''
-tags:
-  - template
+tags: ['template']
 ---
 {% extends 'base.njk' %}
 
