Filtrering med animasjon

--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -82,7 +82,8 @@
     <link rel="stylesheet" href="/assets/main.min.css" type="text/css" />
     {% block styles %}{% endblock %}
 
-    <script src="/assets/main.min.js" type="text/javascript" defer></script>
+    <script src="/assets/alpineFocus.min.js" type="text/javascript" defer></script>
+    <script src="/assets/alpine.min.js" type="text/javascript" defer></script>
     {% block script %}{% endblock %}
 
     {%- if environment === 'production' -%}
