--- a/src/pages/produktoversikt/produktoversikt.njk
+++ b/src/pages/produktoversikt/produktoversikt.njk
@@ -1,8 +1,7 @@
 ---
-title: 'Produkt&shy;oversikt'
+title: 'Søknad og skjema fra A til Å'
 description: ''
-tags:
-  - template
+tags: ['template']
 order: 4
 bodyClass: ''
 ---
@@ -61,7 +60,7 @@ bodyClass: ''
         updateCount()
       });
       updateCount()">
-    <div class="grid grid-cols-layout">
+    <div class="grid grid-cols-layout pb-6">
       <div class="relative w-full col-content lg:col-feature">
 
         <div class="hidden float-right my-2 ml-24 xs:block">
@@ -71,20 +70,137 @@ bodyClass: ''
         <h1 class="text-3xl font-semibold leading-tight md:text-5xl md:leading-tight">Søknad og skjema fra A&nbsp;til&nbsp;Å</h1>
 
         <p class="max-w-2xl mt-2 text-xl md:mt-3 md:text-2xl">Pengestøtter og tjenester fra NAV for privatpersoner. Du kan søke eller filtrere etter type og område.</p>
-
-
       </div>
     </div>
 
     <div class="grid grid-cols-layout">
       <div class="grid w-full gap-8 pb-20 lg:gap-x-16 lg:items-start lg:grid-cols-sidebar col-content lg:col-feature">
 
-        <div class="lg:-mt-4 lg:row-span-2 lg:col-start-2">
+        <div class="relative hidden md:block lg:col-start-1">
+          <label for="searchFilter" class="font-semibold sr-only">Søk</label>
+          <span class="absolute inset-y-0 left-0 grid px-2.5 place-items-center">
+            {{ '/src/_includes/svg/icons/search.svg' | svgContents('w-6 h-6') | safe }}
+          </span>
+          <input id="searchFilter" type="search" x-model="search" class="w-full pl-10 pr-3 py-2.5 border border-gray-300 rounded shadow-inner bg-gray-50/50 focus:outline-none focus:ring focus:ring-blue-800">
+        </div>
+
+        <div class="lg:-mt-10 lg:row-span-3 lg:col-start-2 relative" x-data="{ filterDrawer: false, filterTags: false, filterSearch: false }">
+
           {% set labelClasses = "inline-flex cursor-pointer px-4 pt-1.5 pb-1.5 leading-tight text-base bg-gray-100 rounded-full hover:bg-deepblue-100 peer-checked:bg-deepblue-500 peer-checked:text-white peer-focus:ring-2 peer-focus:ring-deepblue-800" %}
           {% set inputClasses = "absolute opacity-0 pointer-events-none peer" %}
 
-          <h2 class="mt-6 text-sm tracking-widest uppercase lg:mt-8 opacity-70">Velg type</h2>
-          <ul class="flex flex-wrap items-start mt-2.5 gap-x-2 gap-y-3">
+          <div class="flex gap-2.5 sm:hidden">
+            <button class="flex-1 flex items-center justify-start gap-3 rounded bg-deepblue-100 py-3 px-4 leading-none"
+            x-on:click="filterDrawer = true, filterSearch = false, filterTags = true"
+            x-bind:aria-expanded="filterDrawer && filterTags">
+              {{ '/src/_includes/svg/icons/filter.svg' | svgContents('w-5 h-5') | safe }}
+              <span>Velg type og/eller område</span>
+            </button>
+
+            <button class="flex items-center justify-center gap-2 rounded bg-blue-500 text-white py-3 px-8 leading-none"
+            x-on:click="filterDrawer = true, filterSearch = true, filterTags = false"
+            x-bind:aria-expanded="filterDrawer && filterSearch">
+              {{ '/src/_includes/svg/icons/search.svg' | svgContents('w-6 h-6 -ml-2') | safe }}
+              <span>Søk</span>
+            </button>
+          </div>
+
+          <div class="fixed overflow-hidden overscroll-contain inset-0 z-50" x-show="filterDrawer" x-bind:class="filterDrawer && 'animate-blur'"
+              x-transition:enter="transition ease-out duration-300"
+              x-transition:enter-start="opacity-0"
+              x-transition:enter-end="opacity-100"
+              x-transition:leave="transition ease-in duration-300"
+              x-transition:leave-start="opacity-100"
+              x-transition:leave-end="opacity-0">
+            <div class="absolute grid inset-x-0 bottom-0 shadow-drawer bg-white rounded-t-2xl sm:hidden"
+              x-show="filterTags"
+              x-on:click.outside="filterDrawer = false, filterTags = false"
+              x-transition:enter="transition ease-out duration-300"
+              x-transition:enter-start="opacity-0 translate-y-6"
+              x-transition:enter-end="opacity-100 translate-y-0"
+              x-transition:leave="transition ease-in duration-300"
+              x-transition:leave-start="opacity-100 translate-y-0"
+              x-transition:leave-end="opacity-0 translate-y-6">
+              <div class="pt-4 pb-12 px-clamp-gap overflow-y-auto">
+                <h2 class="mt-6 text-sm tracking-widest uppercase lg:mt-8 opacity-70">Velg type</h2>
+                <ul class="flex flex-wrap items-start mt-2.5 gap-x-2 gap-y-3">
+                  <li>
+                    <input
+                      type="radio"
+                      x-model="typeFilter"
+                      x-on:change="updateCount($refs)"
+                      class="{{ inputClasses }}"
+                      name="filter-type-mobil"
+                      value="alle"
+                      id="filter-type-all"
+                      checked="checked"
+                    />
+                    <label class="{{ labelClasses }}" for="filter-type-all">Alle</label>
+                  </li>
+                  {% for item in collections.typeFilter %}
+                    <li>
+                      <input type="radio" x-on:change="updateCount($refs)" x-model="typeFilter" class="{{ inputClasses }}" name="filter-type-mobil" value="{{ item | slugify }}" id="filter-{{ item | slugify }}" />
+                      <label class="{{ labelClasses }}" for="filter-{{ item | slugify }}">
+                        {{ item }}
+                      </label>
+                    </li>
+                  {% endfor %}
+                </ul>
+
+                <h2 class="mt-6 text-sm tracking-widest uppercase lg:mt-8 opacity-70">Velg område</h2>
+                <ul class="flex flex-wrap items-start mt-2.5 gap-x-2 gap-y-3">
+                  <li>
+                    <input
+                      type="radio"
+                      x-model="areaFilter"
+                      x-on:change="updateCount($refs)"
+                      class="{{ inputClasses }}"
+                      name="filter-area-mobil"
+                      value="alle"
+                      id="filter-area-all"
+                      checked="checked"
+                    />
+                    <label class="{{ labelClasses }}" for="filter-area-all">Alle</label>
+                  </li>
+                  {% for item in collections.areaFilter %}
+                    <li>
+                      <input type="radio" x-on:change="updateCount($refs)" x-model="areaFilter" class="{{ inputClasses }}" name="filter-area-mobil" value="{{ item | slugify }}" id="filter-{{ item | slugify }}" />
+                      <label class="{{ labelClasses }}" for="filter-{{ item | slugify }}">
+                        {{ item }}
+                      </label>
+                    </li>
+                  {% endfor %}
+                </ul>
+              </div>
+              <div class="px-clamp-gap py-4 bg-gray-50">
+                <button class="bg-blue-500 py-2 px-4 rounded-lg text-white w-full" x-on:click="filterTags = false, filterDrawer = false">Vis resultat (<span x-text="count"></span>)</button>
+              </div>
+            </div>
+            <div class="absolute grid py-6 px-clamp-gap inset-x-0 bottom-0 shadow-drawer bg-white rounded-t-2xl sm:hidden"
+              x-show="filterSearch"
+              x-on:click.outside="filterDrawer = false, filterSearch = false"
+              x-transition:enter="transition ease-out duration-300"
+              x-transition:enter-start="opacity-0 translate-y-6"
+              x-transition:enter-end="opacity-100 translate-y-0"
+              x-transition:leave="transition ease-in duration-300"
+              x-transition:leave-start="opacity-100 translate-y-0"
+              x-transition:leave-end="opacity-0 translate-y-6">
+              <form class="grid gap-3" x-on:submit.prevent="filterSearch = false, filterDrawer = false">
+                <div class="relative" x-trap="filterSearch">
+                  <label for="searchFilter" class="font-semibold sr-only">Søk</label>
+                  <span class="absolute inset-y-0 left-0 grid px-2.5 place-items-center">
+                    {{ '/src/_includes/svg/icons/search.svg' | svgContents('w-6 h-6') | safe }}
+                  </span>
+                  <input x-ref="searchFilter" id="searchFilter" type="search" x-model="search" class=" w-full pl-10 pr-3 py-2.5 border border-gray-300 rounded shadow-inner bg-gray-50/50 focus:outline-none focus:ring-2 focus:ring-blue-800">
+                </div>
+                <button type="submit" class="bg-blue-500 py-3 px-4 rounded text-white whitespace-nowrap focus:outline-none focus:ring focus:ring-blue-800">Vis resultat (<span x-text="count"></span>)</button>
+              </form>
+            </div>
+          </div>
+
+          <div class="hidden sm:block">
+            <h2 class="mt-6 text-sm tracking-widest uppercase lg:mt-8 opacity-70">Velg type</h2>
+            <ul class="flex flex-wrap items-start mt-2.5 gap-x-1.5 gap-y-2.5">
               <li>
                 <input
                   type="radio"
@@ -98,18 +214,18 @@ bodyClass: ''
                 />
                 <label class="{{ labelClasses }}" for="filter-type-all">Alle</label>
               </li>
-            {% for item in collections.typeFilter %}
-              <li>
-                <input type="radio" x-on:change="updateCount($refs)" x-model="typeFilter" class="{{ inputClasses }}" name="filter-type" value="{{ item | slugify }}" id="filter-{{ item | slugify }}" />
-                <label class="{{ labelClasses }}" for="filter-{{ item | slugify }}">
-                  {{ item }}
-                </label>
-              </li>
-            {% endfor %}
-          </ul>
+              {% for item in collections.typeFilter %}
+                <li>
+                  <input type="radio" x-on:change="updateCount($refs)" x-model="typeFilter" class="{{ inputClasses }}" name="filter-type" value="{{ item | slugify }}" id="filter-{{ item | slugify }}" />
+                  <label class="{{ labelClasses }}" for="filter-{{ item | slugify }}">
+                    {{ item }}
+                  </label>
+                </li>
+              {% endfor %}
+            </ul>
 
-          <h2 class="mt-6 text-sm tracking-widest uppercase lg:mt-8 opacity-70">Velg område</h2>
-          <ul class="flex flex-wrap items-start mt-2.5 gap-x-2 gap-y-3">
+            <h2 class="mt-6 text-sm tracking-widest uppercase lg:mt-8 opacity-70">Velg område</h2>
+            <ul class="flex flex-wrap items-start mt-2.5 gap-x-1.5 gap-y-2.5">
               <li>
                 <input
                   type="radio"
@@ -123,41 +239,33 @@ bodyClass: ''
                 />
                 <label class="{{ labelClasses }}" for="filter-area-all">Alle</label>
               </li>
-            {% for item in collections.areaFilter %}
-              <li>
-                <input type="radio" x-on:change="updateCount($refs)" x-model="areaFilter" class="{{ inputClasses }}" name="filter-area" value="{{ item | slugify }}" id="filter-{{ item | slugify }}" />
-                <label class="{{ labelClasses }}" for="filter-{{ item | slugify }}">
-                  {{ item }}
-                </label>
-              </li>
-            {% endfor %}
-          </ul>
-
+              {% for item in collections.areaFilter %}
+                <li>
+                  <input type="radio" x-on:change="updateCount($refs)" x-model="areaFilter" class="{{ inputClasses }}" name="filter-area" value="{{ item | slugify }}" id="filter-{{ item | slugify }}" />
+                  <label class="{{ labelClasses }}" for="filter-{{ item | slugify }}">
+                    {{ item }}
+                  </label>
+                </li>
+              {% endfor %}
+            </ul>
+          </div>
         </div>
 
-        <div class="lg:col-start-1 lg:-order-1">
-          <div class="relative mt-6">
-            <label for="searchFilter" class="font-semibold sr-only">Søk</label>
-            <span class="absolute inset-y-0 left-0 grid px-2.5 place-items-center">
-              {{ '/src/_includes/svg/icons/search.svg' | svgContents('w-6 h-6') | safe }}
-            </span>
-            <input id="searchFilter" type="search" x-model="search" class="w-full pl-10 pr-3 py-2.5 border border-gray-300 rounded shadow-inner bg-gray-50/50 focus:outline-none focus:ring focus:ring-blue-800">
-          </div>
-
-          <p class="mt-8 mb-2">Viser <span x-text="count"></span> av {{ products.length }} produkter og tjenester</p>
+        <div class="lg:col-start-1">
+          <p class="mb-2">Viser <span x-text="count"></span> av {{ collections.produkt.length }} produkter og tjenester</p>
 
           <div class="border-b border-deepblue-100" x-ref="entries" x-show="count !== 0">
             {% for product in collections.produkt %}
               <div
                 x-data="{ expanded: false }"
-                class="focus-within:z-10 -mx-clamp-gap px-clamp-gap sm:-mx-0 sm:px-0 border-t border-deepblue-100"
+                class="focus-within:z-10 -mx-clamp-gap px-clamp-gap sm:mx-0 sm:px-0 border-t border-deepblue-100"
                 x-bind:class="expanded ? '' : ''"
                 x-show="filterItem($el)"
                 data-type="{{ product.data.type | slugify }}"
                 data-area="{{ product.data.area | slugify }}">
 
                 <div
-                  class="py-4 px-clamp-gap -mx-clamp-gap -my-px relative z-10 flex items-center gap-4 text-left sm:-mx-2 sm:px-4 sm:rounded-lg hover:z-20"
+                  class="py-4 px-clamp-gap -mx-clamp-gap -my-px relative z-10 flex items-center gap-4 text-left sm:mx-0 sm:px-4 sm:rounded-lg hover:z-20"
                   x-bind:class="expanded ? ' hover:bg-deepblue-200 bg-deepblue-50' : 'hover:bg-deepblue-200'">
                   {% if product.data.icon %}
                     {{ product.data.icon | svgContents('w-12 h-12 lg:w-14 lg:h-14 shrink-0') | safe }}
@@ -177,13 +285,13 @@ bodyClass: ''
                       {%- endfor -%}
                     </p>
                   </div>
-                  <button x-on:click="expanded = !expanded" class="absolute inset-0 flex items-center justify-end pr-4 rounded-lg group focus:outline-none focus-visible:ring focus-visible:ring-inset focus-visible:ring-blue-800" x-bind:aria-expanded="expanded">
+                  <button x-on:click="expanded = !expanded" class="absolute inset-0 w-full flex items-center justify-end pr-4 rounded-lg group focus:outline-none focus-visible:ring focus-visible:ring-inset focus-visible:ring-blue-800" x-bind:aria-expanded="expanded">
                     <span class="sr-only">Vis/skjul innhold</span>
                     {{ '/src/_includes/svg/icons/chevron-down.svg' | svgContents('mr-1.5 w-5 h-5 opacity-50 transition duration-100 group-aria-expanded:rotate-180') | safe }}
                   </button>
                 </div>
 
-                <div class="pt-6 pb-8 px-clamp-gap -mx-clamp-gap relative min-h-[30vh] markdown bg-deepblue-50 sm:-mx-2 sm:-mt-2 sm:px-5 sm:rounded-b-lg mb-4" x-bind:hidden="!expanded">
+                <div class="pt-6 pb-8 px-clamp-gap -mx-clamp-gap relative min-h-[30vh] markdown bg-deepblue-50 sm:mx-0 sm:-mt-2 sm:px-5 sm:rounded-b-lg mb-4" x-bind:hidden="!expanded">
                   <p>{{ product.data.ingress }}</p>
 
                   {{ product.content | markdown | safe }}
